# -----

countdown-timer/: .coverage  ANDROID_DEVELOPMENT_PLAN.md  FINAL_PROJECT_REPORT.md  HANDOFF_SUMMARY.md  NAVIGATION_GUIDE.md  PHASE_3_DEVELOPMENT_PLAN.md  PROJECT_COMPLETION_CHECKLIST.md  PROJECT_DELIVERY_SUMMARY.md  README.md  STAGE2_COMPLETION_REPORT.md  STAGE3_COMPLETION_SUMMARY.md  STAGE3_PROJECT_PLAN.md  STAGE3_READINESS_CHECKLIST.md  STAGE3_VERIFICATION_REPORT.md  TEST_SUMMARY.md  app.py  pytest.ini  requirements.txt  setup.cfg  setup.py  verify_stage3.py
countdown-timer/countdown-timer-android/: README.md  gradle.properties  gradlew.bat  local.properties  settings.gradle
countdown-timer/countdown-timer-android/app/: build.gradle
countdown-timer/countdown-timer-android/app/src/main/: AndroidManifest.xml
countdown-timer/src/countdown_timer/: __init__.py  cli.py  event_manager.py  formatter.py  storage.py  validator.py
countdown-timer/src/countdown_timer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
countdown-timer/src/countdown_timer/api/: __init__.py  app.py  models.py  routes.py
countdown-timer/src/countdown_timer/web/: __init__.py
countdown-timer/src/countdown_timer/web/static/css/: style.css
countdown-timer/src/countdown_timer/web/templates/: index.html
countdown-timer/tests/: conftest.py
countdown-timer/tests/integration/: conftest.py  test_api.py  test_web.py
countdown-timer/tests/unit/: test_cli.py  test_event_manager.py  test_formatter.py  test_storage.py  test_validator.py
specs/main/: plan.md
(+52 files in other folders)
