[metadata]
name = countdown-timer
version = 1.0.0
author = Your Team
author_email = team@example.com
description = Event countdown tool with CLI and API support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourorg/countdown-timer
project_urls =
    Bug Tracker = https://github.com/yourorg/countdown-timer/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    click>=8.1.0
    pytest>=7.4.0
    pytest-cov>=4.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    countdown = countdown_timer.cli:main

[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    isort>=5.12.0
p2 =
    fastapi>=0.100.0
    sqlalchemy>=2.0.0
    uvicorn>=0.23.0
p3 =
    redis>=5.0.0
    celery>=5.3.0
    pytz>=2023.3
